# QuietML

./: .gitignore  README.md  pyproject.toml  setup.cfg
examples/: test_supress.py
quietml/: __init__.py  core.py
