[metadata]
name = quietml
version = 2.0.0
author = Kaustubh Aggarwal
author_email = kaustubh.aggarwal31@example.com
description = A lightweight Python library to silence and simplify noisy machine learning logs (LightGBM, XGBoost, CatBoost, TensorFlow) for cleaner, calmer output.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaustubh3103/quietml
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.extras_require]
dev =
    build
    twine
